[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/cobalt-org/cobalt.rs"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"  # sometimes good to name what you are returning
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "warn"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
# str_to_string = "warn"
# string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
# string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
verbose_file_reads = "warn"
# wildcard_imports = "warn"
zero_sized_map_values = "warn"
assigning_clones = "allow"  # TODO

[package]
name = "cobalt-bin"
version = "0.19.6"
description = "Static site generator written in Rust"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["static", "site", "generator"]
license = "MIT"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [
    ".gitignore",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "release.toml",
    "typos.toml",
    "committed.toml",
    "docs/**",
    ".github/**",
    "tests/**",
    "benches/**",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/cobalt-org/cobalt.rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[lib]
name="cobalt"

[[bin]]
name = "cobalt"
doc = false

[dependencies]
cobalt-config = { version = "=0.19.4", path = "crates/config", features = ["unstable"] }
cobalt-core = { version = "=0.19.4", path = "crates/core", features = ["unstable"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.2"
proc-exit = "2"
colorchoice = "1.0.0"
colorchoice-clap = "1.0.3"
human-panic = "2"
scrawl = "2.0"
tempfile = "3.10"
relative-path = { version = "1", features = ["serde"] }
liquid = "0.26"
liquid-core = "0.26"
liquid-lib = { version = "0.26", features = ["jekyll", "shopify", "extra"] }
deunicode = "1.4.4"
walkdir = "2.5"
time = "0.3"
log = "0.4"
env_logger = "0.11"
rss = "2.0"
jsonfeed = "0.2"
pulldown-cmark = {version="0.11", default-features = false, features = ["html"] }
engarde = { version = "0.1", path = "crates/engarde" }
regex = "1.10"
lazy_static = "1.4"
itertools = "0.13"
ignore = "0.4"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8.12"
normalize-line-endings = "0.3.0"
sitemap = "0.4"
open = "5"
dunce = "1.0.4"

file-serve = { version = "0.3.5", path = "crates/file-serve", optional = true }
notify = { version = "6", optional = true, default-features = false, features = ["macos_fsevent"] }

sass-rs = { version = "0.2", optional = true }

html-minifier = {version="5.0", optional = true }
anyhow = "1.0.82"
anstream = "0.6.13"
chrono = "0.4.38"
anstyle = "1.0.7"

[dev-dependencies]
trycmd = "0.15"
snapbox = { version = "0.6.5", features = ["diff"] }

[features]
default = ["syntax-highlight", "sass", "serve", "html-minifier"]
unstable = []
preview_unstable = ["cobalt-config/preview_unstable"]

serve = ["file-serve", "notify"]
syntax-highlight = ["engarde/syntax"]
sass = ['sass-rs']

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1

[lints]
workspace = true
