[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/cobalt-org/cobalt.rs"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"  # sometimes good to name what you are returning
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "allow"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
result_large_err = "allow"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
# str_to_string = "warn"
# string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
# string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
uninlined_format_args = "warn"
verbose_file_reads = "warn"
# wildcard_imports = "warn"
zero_sized_map_values = "warn"
assigning_clones = "allow"  # TODO

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
# debug = "line-tables-only"  # requires Cargo 1.71

[package]
name = "cobalt-bin"
version = "0.20.2"
description = "Static site generator written in Rust"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["static", "site", "generator"]
license = "MIT"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [
    ".gitignore",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "release.toml",
    "typos.toml",
    "committed.toml",
    "docs/**",
    ".github/**",
    "tests/**",
    "benches/**",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/cobalt-org/cobalt.rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[lib]
name="cobalt"

[[bin]]
name = "cobalt"
doc = false

[dependencies]
cobalt-config = { version = "=0.19.9", path = "crates/config", features = ["unstable"] }
cobalt-core = { version = "=0.19.9", path = "crates/core", features = ["unstable"] }
clap = { version = "4.5.37", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "3.0.2"
proc-exit = "2.0.2"
colorchoice = "1.0.3"
colorchoice-clap = "1.0.6"
human-panic = "2.0.3"
scrawl = "2.0.0"
tempfile = "3.19.1"
relative-path = { version = "2.0.0", features = ["serde"] }
liquid = "0.26.9"
liquid-core = "0.26.9"
liquid-lib = { version = "0.26.9", features = ["jekyll", "shopify", "extra"] }
deunicode = "1.6.2"
walkdir = "2.5.0"
time = "0.3.41"
log = "0.4.27"
env_logger = "0.11.8"
rss = "2.0.12"
jsonfeed = "0.2.0"
pulldown-cmark = {version="0.13.0", default-features = false, features = ["html"] }
engarde = { version = "0.1.15", path = "crates/engarde" }
regex = "1.11.1"
itertools = "0.14.0"
ignore = "0.4.23"
serde = "1.0.219"
serde_yaml = "0.9.34"
serde_json = "1.0.140"
toml = "0.9.0"
normalize-line-endings = "0.3.0"
sitemap = "0.4.1"
open = "5.3.2"
dunce = "1.0.5"

file-serve = { version = "0.3.10", path = "crates/file-serve", optional = true }
notify = { version = "8.0.0", optional = true, default-features = false, features = ["macos_fsevent"] }

grass = { version = "0.13.4", features = ["random"], default-features = false, optional = true }

html-minifier = {version="5.0.0", optional = true }
anyhow = "1.0.98"
anstream = "0.6.18"
chrono = "0.4.41"
anstyle = "1.0.10"

[dev-dependencies]
trycmd = "0.15.10"
snapbox = { version = "0.6.21", features = ["diff"] }

[features]
default = ["syntax-highlight", "sass", "serve", "html-minifier"]
unstable = []
preview_unstable = ["cobalt-config/preview_unstable"]

serve = ["file-serve", "notify"]
syntax-highlight = ["engarde/syntax"]
sass = ["dep:grass"]

[lints]
workspace = true
