[package]
name = "cobalt-config"
version = "0.19.7"
description = "Static site generator written in Rust"
readme = "../../README.md"
keywords = ["static", "site", "generator"]
categories = ["command-line-utilities"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
unstable = []
preview_unstable = []

[dependencies]
liquid-core = "0.26.9"
time = "0.3.41"
log = "0.4.27"
regex = "1.11.1"
serde = "1.0.219"
serde_yaml = "0.9.34"
relative-path = { version = "1.9.3", features = ["serde"] }
once_cell = "1.21.3"
status = { version = "0.0.10", features = ["send_sync"] }
deunicode = "1.6.2"
itertools = "0.14.0"

[lints]
workspace = true
