[package]
name = "cobalt-config"
version = "0.19.9"
description = "Static site generator written in Rust"
readme = "../../README.md"
categories = ["command-line-utilities"]
keywords = ["static", "site", "generator"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
unstable = []
preview_unstable = []

[dependencies]
liquid-core = "0.26.9"
time = "0.3.41"
log = "0.4.27"
regex = "1.11.1"
serde = "1.0.219"
serde_yaml = "0.9.34"
relative-path = { version = "2.0.0", features = ["serde"] }
status = { version = "0.0.10", features = ["send_sync"] }
deunicode = "1.6.2"
itertools = "0.14.0"

[lints]
workspace = true
