[package]
name = "cobalt-core"
version = "0.19.6"
description = "Static site generator written in Rust"
readme = "../../README.md"
keywords = ["static", "site", "generator"]
categories = ["command-line-utilities"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
unstable = []
preview_unstable = []

[dependencies]
cobalt-config = { version = "=0.19.6", path = "..//config", features = ["unstable"] }
ignore = "0.4.23"
walkdir = "2.5.0"
liquid-core = "0.26.9"
log = "0.4.27"
serde = "1.0.219"
once_cell = "1.21.3"
status = { version = "0.0.10", features = ["send_sync"] }
relative-path = { version = "1.9.3", features = ["serde"] }

[lints]
workspace = true
