[package]
name = "engarde"
version = "0.1.0"
description = "Fenced Code Formatting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cobalt-org/cobalt.rs"
documentation = "docs.srs/engarde"
readme = "README.md"
keywords = ["syntax", "highlighting", "highlighter", "colouring", "parsing"]
categories = ["parser-implementations", "parsing", "text-processing"]
edition = "2018"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/cobalt-org/cobalt.rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []
syntax = ["syntect"]

[dependencies.syntect]
version = "4.5.0"
optional = true
default-features = false
features =  ["parsing", "regex-fancy", "assets", "html", "dump-load-rs"]
