[package]
name = "file-serve"
version = "0.1.1"
description = "HTTP Static File Server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cobalt-org/cobalt.rs"
homepage = "https://github.com/cobalt-org/cobalt.rs/tree/master/crates/file-serve"
documentation = "http://docs.rs/file-serve"
readme = "README.md"
categories = ["development-tools::testing", "web-programming::http-server"]
keywords = ["serve", "http-server", "static-files", "http", "server"]
edition = "2018"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/cobalt-org/cobalt.rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
tiny_http = "0.11.0"
mime_guess = "2"
log = "0.4"
