[package]
name = "cobalt-model"
version = "0.16.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Static site generator written in Rust"
repository = "https://github.com/cobalt-org/cobalt.rs"
readme = "../README.md"
keywords = ["static", "site", "generator"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "cobalt-org/cobalt.rs" }
appveyor = { repository = "cobalt-org/cobalt.rs" }

[dependencies]
cobalt-config = { version = "0.16", path = "../config" }
liquid = "0.19.0"
status = { version = "0.0.10", features = ["send_sync"] }
once_cell = "1.2"
itertools = "0.8"
chrono = "0.4"
normalize-line-endings = "0.3.0"
